force-app/main/default/objects/Contact_Card__c/Contact_Card__c.object-meta.xml
<CustomObject>
    <description>Houses either Organization Contact information or non-Constituent information</description>
    <label>Contact Card</label>
    <nameField>
        <displayFormat>CN-{0000000}</displayFormat>
        <label>Contact Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>