force-app/main/default/objects/Contact_Card__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <formula>IF(
ISBLANK( Constituent__c ),
IF(
(OR(NOT(ISBLANK(Address_Line_1__c)), NOT(ISBLANK(City__c)), NOT(ISBLANK(State__c)), NOT(ISBLANK(Postal_Code__c)), NOT(ISBLANK(Country__c)))),


IF(NOT(ISBLANK(Address_Line_1__c)), Address_Line_1__c &amp; IF(NOT(ISBLANK(Address_Line_2__c)), &quot; &quot;, &quot;&quot;), &quot;&quot;) &amp;
IF(NOT(ISBLANK(Address_Line_2__c)), Address_Line_2__c, &quot;&quot;) &amp;

IF(OR(NOT(ISBLANK(Address_Line_1__c)), NOT(ISBLANK(Address_Line_2__c))), BR(), &quot;&quot;) &amp;

IF(NOT(ISBLANK(City__c)),
City__c &amp; IF(NOT(ISBLANK(State__c)), &quot;, &quot; ,
IF(NOT(ISBLANK(Postal_Code__c)), &quot; &quot; , BR())) ,
&quot;&quot;) &amp;

IF(NOT(ISBLANK(State__c)), State__c &amp; IF(NOT(ISBLANK(Postal_Code__c)), &quot; &quot; , BR()) , &quot;&quot;) &amp;
IF(NOT(ISBLANK(Postal_Code__c)), Postal_Code__c &amp; BR() ,&quot;&quot;) &amp;

IF(NOT(ISBLANK(Country__c)), Country__c, &quot;&quot;)
, &quot;&quot;
),
 Constituent__r.ucinn_ascendv2__Preferred_Address_Formula__c )</formula>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>