force-app/main/default/objects/Contact_Card__c/fields/Contact_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Role__c</fullName>
    <label>Contact Owner Role</label>
    <length>60</length>
    <type>Text</type>
</CustomField>