force-app/main/default/objects/Contact_Card__c/fields/Hiring_Department__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Department__c</fullName>
    <label>Hiring Department</label>
    <length>50</length>
    <type>Text</type>
</CustomField>