force-app/main/default/objects/Contact_Card__c/fields/nd_Email_and_Type_formula__c.field-meta.xml
<CustomField>
    <fullName>nd_Email_and_Type_formula__c</fullName>
    <description>If a Constituent is referenced, pulls the information from the Constituent record. If a Constituent is not referenced, display what was entered in the text field.</description>
    <formula>IF(AND(NOT(ISBLANK( Constituent__c  )), NOT(ISBLANK( Constituent__r.Email ))),

(Constituent__r.Email &amp;BR() &amp;

&quot;Email Type - &quot; &amp; CASE(Constituent__r.ucinn_ascendv2__Preferred_Email_Type__c,

&apos;U&apos;,&apos;Business Email&apos;,
&apos;O&apos;,&apos;Other Email&apos;,
&apos;M&apos;,&apos;Personal Email&apos;,
&apos;Fundraiser&apos;,&apos;Fundraiser&apos;,
&apos;CC&apos;,&apos;Corporate Contact Email&apos;,
&apos;Other&apos;)),

IF(AND(NOT(ISBLANK( Constituent__c )),(ISBLANK( Constituent__r.Email ))),

&quot;No Preferred Email&quot;,

IF(ISBLANK(Constituent__c ),

(Email__c &amp;BR() &amp; &quot;Email Type - &quot;&amp; TEXT(Email_Type__c)),

&quot;&quot;
)))</formula>
    <label>Email and Type</label>
    <type>Text</type>
</CustomField>