force-app/main/default/objects/Contact_Card__c/fields/nd_First_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>nd_First_Name_formula__c</fullName>
    <description>If a Constituent is referenced, pulls the information from the Constituent record. If a Constituent is not referenced, display what was entered in the text field.</description>
    <formula>IF( ISBLANK( Constituent__c ),   First_Name__c   ,   Constituent__r.FirstName  )</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>