force-app/main/default/objects/Contact_Card__c/fields/nd_Last_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>nd_Last_Name_formula__c</fullName>
    <description>If a Constituent is referenced, pulls the information from the Constituent record. If a Constituent is not referenced, display what was entered in the text field.</description>
    <formula>IF( ISBLANK( Constituent__c ),  Last_Name__c, Constituent__r.LastName )</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>