force-app/main/default/objects/Contact_Card__c/fields/nd_Phone_and_Type_formula__c.field-meta.xml
<CustomField>
    <fullName>nd_Phone_and_Type_formula__c</fullName>
    <description>If a Constituent is referenced, pulls the information from the Constituent record. If a Constituent is not referenced, display what was entered in the text field.</description>
    <formula>IF(AND(NOT(ISBLANK( Constituent__c )), NOT(ISBLANK(  Constituent__r.Phone  ))),

(Constituent__r.Phone  &amp;BR() &amp; 

&quot;Phone Type - &quot; &amp; CASE(Constituent__r.ucinn_ascendv2__Preferred_Phone_Type__c,

&apos;B&apos;,&apos;Business&apos;,
&apos;H&apos;,&apos;Home&apos;,
&apos;M&apos;,&apos;Mobile&apos;,
&apos;O&apos;,&apos;Other&apos;,
&apos;Z&apos;,&apos;Business Cell Phone&apos;,
&apos;Y&apos;,&apos;Business Phone Only&apos;,
&apos;Other&apos;)),

IF(AND(NOT(ISBLANK( Constituent__c )),(ISBLANK( Constituent__r.Phone ))),

&quot;No Preferred Phone&quot;,

IF(ISBLANK(Constituent__c ),

(Phone_Number__c  &amp;BR() &amp; &quot;Phone Type - &quot;&amp; TEXT(Phone_Type__c)),
&quot;&quot;
)))</formula>
    <label>Phone and Type</label>
    <type>Text</type>
</CustomField>