force-app/main/default/objects/Contact_Card__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organization Contacts</relationshipLabel>
    <relationshipName>Organization_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>