force-app/main/default/objects/Contact_Card__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <inlineHelpText>If filled, please indicate the Phone Type and Phone Status</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>