force-app/main/default/objects/Contact_Card__c/fields/Related_Constituent__c.field-meta.xml
<CustomField>
    <fullName>Related_Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Cards (Related Constituent)</relationshipLabel>
    <relationshipName>Related_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>