force-app/main/default/objects/Contact_Card__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
End_Date__c &lt;= TODAY()
&amp;&amp;
TEXT(End_Date__c) &lt;&gt; &quot;&quot;,
&quot;Inactive&quot;,
&quot;Active&quot;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>