force-app/main/default/objects/Contact_Card__c/recordTypes/Contact_Person.recordType-meta.xml
<RecordType>
    <fullName>Contact_Person</fullName>
    <active>true</active>
    <label>Contact Person</label>
</RecordType>