force-app/main/default/objects/Contact_Card__c/recordTypes/New_Contact_Person.recordType-meta.xml
<RecordType>
    <fullName>New_Contact_Person</fullName>
    <active>true</active>
    <label>New Contact Person</label>
</RecordType>