force-app/main/default/objects/Contact_Card__c/recordTypes/New_Organization_Contact.recordType-meta.xml
<RecordType>
    <fullName>New_Organization_Contact</fullName>
    <active>true</active>
    <label>New Organization Contact</label>
</RecordType>