force-app/main/default/objects/Contact_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Constituent__c</columns>
    <columns>Organization__c</columns>
    <columns>Related_Constituent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>